[package]
name = "axum-todos"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
futures = "0.3.30"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower = { version = "0.5.0", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
